--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,6 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install -r requirements-dev.txt
       - name: Running flake8
-        run: flake8 stgpytools
+        run: flake8 jetpytools
       - name: Running mypy
-        run: mypy stgpytools
+        run: mypy jetpytools
