--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,9 +6,10 @@ jobs:
   windows:
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version:
-          - '3.10'
+          - ['3.10', '3.11', '3.12']
 
     steps:
       - uses: actions/checkout@v4
