--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,13 @@
-name: lint
+name: Unit tests
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+
 jobs:
-  windows:
-    runs-on: windows-latest
+  test:
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
@@ -16,11 +19,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-      - name: Running flake8
-        run: flake8 jetpytools tests
-      - name: Running mypy
-        run: mypy jetpytools tests
+          uv venv
+          uv pip install -r requirements-dev.txt -e .
+      - name: Running test
+        run: uv run pytest tests
