--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,26 +1,44 @@
-name: lint
+name: Lint
 
 on: [push, pull_request]
 
 jobs:
-  windows:
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.10', '3.11', '3.12']
-
+  flake8:
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.12'
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          uv venv
+          uv pip install -r requirements-dev.txt -e .
       - name: Running flake8
-        run: flake8 jetpytools tests
+        run: uv run flake8 jetpytools tests
+
+  mypy:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+      - name: Install dependencies
+        run: |
+          uv venv
+          uv pip install -r requirements-dev.txt -e .
       - name: Running mypy
-        run: mypy jetpytools tests
+        # Type check as if we're Windows to satisfy the `type: ignore` in
+        # `get_user_data_dir()`.
+        run: uv run mypy --platform win32 jetpytools tests
