--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,42 +3,48 @@ name: Lint
 on: [push, pull_request]
 
 jobs:
-  flake8:
-    runs-on: ubuntu-24.04
+  ruff:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
+
         with:
-          python-version: '3.12'
+          python-version: '3.13'
+
       - name: Set up uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
+
       - name: Install dependencies
         run: |
-          uv venv
-          uv pip install -r requirements-dev.txt -e .
-      - name: Running flake8
-        run: uv run flake8 jetpytools tests
+          uv sync --locked
+
+      - name: Running ruff
+        run: |
+          uv run ruff check .
+          uv run ruff format --check --diff
 
   mypy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
+
         with:
-          python-version: '3.12'
+          python-version: '3.13'
+
       - name: Set up uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
+
       - name: Install dependencies
         run: |
-          uv venv
-          uv pip install -r requirements-dev.txt -e .
+          uv sync --locked
+
       - name: Running mypy
-        # Type check as if we're Windows to satisfy the `type: ignore` in
-        # `get_user_data_dir()`.
-        run: uv run mypy --platform win32 jetpytools tests
+        run: uv run mypy jetpytools tests
