--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-python@v5
 
         with:
-          python-version: '3.13'
+          python-version: "3.14"
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v6
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-python@v5
 
         with:
-          python-version: '3.13'
+          python-version: "3.14"
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v6
