--- a/.github/workflows/pypipublish.yml
+++ b/.github/workflows/pypipublish.yml
@@ -1,25 +1,25 @@
 name: Publish releases to PyPI
 on:
   push:
-   tags:
+    tags:
       - v[0-9]+**
 
 jobs:
-    package_build:
-      name: Build and push to PyPI
-      runs-on: ubuntu-latest
-      environment:
-        name: pypi
-        url: https://pypi.org/p/jetpytools
-      permissions:
-        id-token: write
-      steps:
+  package_build:
+    name: Build and push to PyPI
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/jetpytools
+    permissions:
+      id-token: write
+    steps:
       - uses: actions/checkout@v4
 
       - name: Prep Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.14"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
