ci: adjust events that trigger workflows
- add the option manually trigger the workflow
- remove the branch constraint in autotag

--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -1,10 +1,9 @@
 name: Check and create tag
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
     paths:
-      - jetpytools/_metadata.py
+      - jetpytools/_version.py
 
 jobs:
   new_version:
