ci: combine python & uv steps

--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -8,9 +8,17 @@ on:
 jobs:
   new_version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Get version number
         run: |
