--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,20 +11,23 @@ on:
     paths:
       - "**.py"
 
+permissions:
+  contents: read
+
+env:
+  PYTHON_VERSION: 3.14
+
 jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Set up Python
-        uses: actions/setup-python@v6
-
-        with:
-          python-version: "3.14"
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_VERSION }}
           enable-cache: true
 
       - name: Install dependencies
@@ -39,21 +42,17 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Set up Python
-        uses: actions/setup-python@v6
-
-        with:
-          python-version: "3.14"
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_VERSION }}
           enable-cache: true
 
       - name: Install dependencies
-        run: |
-          uv sync --locked
+        run: uv sync --locked
 
       - name: Running mypy
         run: uv run mypy jetpytools tests
