Update Github Workflows (#8)
* refactor metadata

- make `__version__` importable from python
- remove duplicated metadata

* ci: adjust events that trigger workflows

- add the option manually trigger the workflow
- remove the branch constraint in autotag

* ci: combine python & uv steps

* ci: split ruff check & format

* ci: use hatch to retrieve version

* summarizes workflow names

--- a/.github/workflows/pypipublish.yml
+++ b/.github/workflows/pypipublish.yml
@@ -1,8 +1,12 @@
 name: Publish releases to PyPI
 on:
+  workflow_dispatch:
   push:
     tags:
       - v[0-9]+**
+
+env:
+  PYTHON_VERSION: 3.14
 
 jobs:
   package_build:
@@ -14,16 +18,13 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
-      - name: Prep Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.14"
-
-      - name: Install uv
+      - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_VERSION }}
           enable-cache: true
 
       - name: Install dependencies
