--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -1,41 +1,47 @@
 name: Check and create tag
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
     paths:
-      - jetpytools/_metadata.py
+      - jetpytools/_version.py
 
 jobs:
   new_version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Get version number
-        run: |
-          echo "CURR_VER=v$(python -c "import runpy;runpy.run_path('jetpytools/_metadata.py', None, '__github__')")" >> $GITHUB_ENV
-      - name: Check if version exists
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: get_version
+        run: echo "curr_ver=v$(uvx hatch version)" >> $GITHUB_OUTPUT
+
+      - name: Check if tag exists
         uses: mukunku/tag-exists-action@v1.6.0
-        id: tagcheck
+        id: check_tag
         with:
-          tag: ${{ env.CURR_VER }}
+          tag: ${{ steps.get_version.outputs.curr_ver }}
 
       - name: Make tag
         uses: actions/github-script@v8
-        if: steps.tagcheck.outputs.exists == 'false'
+        if: steps.check_tag.outputs.exists == 'false'
         with:
-          github-token: ${{ secrets.WORKFLOW_TOKEN }}
           script: |
-            github.git.createRef({
+            github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: `refs/tags/${process.env.CURR_VER}`,
+              ref: `refs/tags/${{ steps.get_version.outputs.curr_ver }}`,
               sha: context.sha
             })
+
       - name: Fallback
-        if: steps.tagcheck.outputs.exists == 'true'
+        if: steps.check_tag.outputs.exists == 'true'
         run: echo "Nothing to see here, move along citizen"
