--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,50 +1,61 @@
 name: Lint
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - "**.py"
+  pull_request:
+    paths:
+      - "**.py"
+
+permissions:
+  contents: read
+
+env:
+  PYTHON_VERSION: 3.14
 
 jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Set up Python
-        uses: actions/setup-python@v6
-
-        with:
-          python-version: "3.14"
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_VERSION }}
           enable-cache: true
 
       - name: Install dependencies
         run: |
           uv sync --locked
 
-      - name: Running ruff
-        run: |
-          uv run ruff check .
-          uv run ruff format --check --diff
+      - name: Run Ruff check
+        id: ruff_check
+        run: uv run ruff check .
+
+      - name: Run Ruff format
+        if: success() || (failure() && steps.ruff_check.conclusion == 'failure')
+        run: uv run ruff format --check --diff
 
   mypy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Set up Python
-        uses: actions/setup-python@v6
-
-        with:
-          python-version: "3.14"
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: ${{ env.PYTHON_VERSION }}
           enable-cache: true
 
       - name: Install dependencies
-        run: |
-          uv sync --locked
+        run: uv sync --locked
 
       - name: Running mypy
         run: uv run mypy jetpytools tests
