--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,11 @@ on:
       - main
     paths:
       - "**.py"
+      - "pyproject.toml"
   pull_request:
     paths:
       - "**.py"
+      - "pyproject.toml"
 
 permissions:
   contents: read
