use Git-derived version

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,10 +19,9 @@ updates:
     patterns: ["*"]
     multi-ecosystem-group: "infrastructure"
 
-    versioning-strategy: increase
+    versioning-strategy: increase-if-necessary
 
   - package-ecosystem: "github-actions"
     directory: "/"
     patterns: ["*"]
     multi-ecosystem-group: "infrastructure"
-
